--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
   ],
   "dependencies": {
     "async": "^2.5.0",
-    "bcoin": "bitpay/bcoin#v1.0.0-beta.14+cash",
-    "bitcoind-rpc": "^0.6.0",
-    "bitcore-lib": "5.0.0-beta.1",
-    "bitcore-p2p": "5.0.0-beta.1",
+    "bcoin": "mosaik-crypto-technologies/bcoin#iop",
+    "bitcoind-rpc": "mosaik-crypto-technologies/bitcoind-rpc#iop",
+    "bitcore-lib": "mosaik-crypto-technologies/bitcore-lib#iop",
+    "bitcore-p2p": "mosaik-crypto-technologies/bitcore-p2p#iop",
     "bn.js": "^4.11.8",
     "body-parser": "^1.13.3",
     "colors": "^1.1.2",
