changed deps to testnet branch

--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
   ],
   "dependencies": {
     "async": "^2.5.0",
-    "bcoin": "mosaik-crypto-technologies/bcoin#iop",
-    "bitcoind-rpc": "mosaik-crypto-technologies/bitcoind-rpc#iop",
-    "bitcore-lib": "mosaik-crypto-technologies/bitcore-lib#iop",
-    "bitcore-p2p": "mosaik-crypto-technologies/bitcore-p2p#iop",
+    "bcoin": "mosaik-crypto-technologies/bcoin#testnet",
+    "bitcoind-rpc": "mosaik-crypto-technologies/bitcoind-rpc#testnet",
+    "bitcore-lib": "mosaik-crypto-technologies/bitcore-lib#testnet",
+    "bitcore-p2p": "mosaik-crypto-technologies/bitcore-p2p#testnet",
     "bn.js": "^4.11.8",
     "body-parser": "^1.13.3",
     "colors": "^1.1.2",
